# notebooklm-skill

./: AGENTS.header.md  AGENTS.md  README.md  SECURITY.md  SKILL.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml
references/: api_reference.md  troubleshooting.md  usage_patterns.md
scripts/: __init__.py  ask_question.py  auth_manager.py  browser_session.py  browser_utils.py  cleanup_manager.py  config.py  notebook_manager.py  run.py  secure_storage.py  setup_environment.py
tests/: test_auth_manager_storage.py  test_secure_storage.py
